--- a/public/style.css
+++ b/public/style.css
@@ -1,50 +1,52 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  position: relative;
+.dropdown-item:hover {
+    color: white ;
+    background-color: #3b82f6;
 }
-*:not(:root, body){
-  overflow: visible;
+.dropdown-item {
+    padding: 10px;
 }
-a {
-  text-decoration: none;
-  color: currentColor;
+.dropdown-item.active {
+    color: white ;
+    background-color: #3b82f6;
 }
-
-:root{
-  font-size: 10px;
-}
-body{
- font-size: 18px;
-    background-color: #333;
-    color: #fff;
-    font-family: 'HK Grotesk', 'Poppins', -apple-system, "Helvetica Neue";
-}
-main {
-    max-width: 70vw;
-    margin: 50px auto;
-}
-article + article {
-    margin-top: 50px;
-    padding-top: 50px;
-    border-top: solid 2px rgba(255, 255, 255, 0.253);
-}
-h1,h2{
-    font-family: 'Fira code';
-    font-size: 30px;
-    margin: 0;
-}
-p{
-  font-size: 18px;
-  font-family: 'HK Grotesk';
-}
-.btn {
-    color: #fff;
-    background-color: #0c6bff;
-    padding: 10px 30px;
-    border: none;
+.dropdown-btn {
+    padding: 10px 10px;
+    font-size: 14px;
+    font-weight: 600;
     border-radius: 10px;
-    top: 15px;
-    position: relative;
+}
+.dropdown-btn > *{
+    pointer-events: none;
+}
+.dropdown-list {
+    position: absolute;
+    bottom: -0%;
+    left: 0;
+    right: -10px;
+    transform: translateY(105%);
+    display: none;
+    max-height: 16rem;
+    overflow: auto;
+}
+.dropdown-list > * {
+    text-align: left;
+    padding: 2.5px 10px;
+    border-bottom: 1px solid rgba(0,0,0, 0.5);
+    margin: 2.5px 0;
+}
+.dropdown-list > *:last-child {
+    border-bottom: none;
+}
+.dropdown-list > *:is(:hover, :focus) {
+    background-color: #0c6bff;
+    color: #fff;
+}
+.dropdown-list * {
+    cursor: pointer;
+}
+.dropdown-list a {
+    display: block;
+}
+.dropdown-list.shown {
+    display: block;
 }
